@@ -7,7 +7,6 @@
 
 void outputHeader(FILE*);
 void outputTempReforms(FILE* output);
-void outputTempReforms2(FILE* output);
 void outputCountryHeader(FILE*);
 void outputCountryHeader2(FILE*);
 void outputCountryMiddle(FILE*);
